# qt6engine

./: .clang-format  .gitignore  CMakeLists.txt  Justfile  LICENSE  README.md  flake.nix  shell.nix
nix/: default.nix  experimental.nix  hjem.nix  module.nix  options.nix  qt5engine.nix  qt6engine.nix
src/: CMakeLists.txt
src/common/: CMakeLists.txt  common.cpp  common.hpp
src/common/config/: configmanager.cpp  configmanager.hpp
src/plugin/: CMakeLists.txt  engine.json  main.cpp  platformtheme.cpp  platformtheme.hpp
src/qt5/: CMakeLists.txt
src/qt5/common/: CMakeLists.txt  common.cpp  common.hpp
src/qt5/common/config/: configmanager.hpp
src/qt5/common/dbus/: configwatcher.cpp  configwatcher.hpp
src/qt5/plugin/: platformtheme.cpp  platformtheme.hpp
src/qt6/: CMakeLists.txt
src/qt6/common/: common.cpp
src/qt6/common/config/: configmanager.cpp
src/qt6/common/dbus/: configwatcher.cpp
src/qt6/plugin/: main.cpp  platformtheme.cpp
src/qt6/style/: plugin.cpp  proxystyle.cpp
src/style/: CMakeLists.txt  plugin.cpp  proxystyle.cpp  proxystyle.hpp
